# bioinformatic-guide

./: Makefile  README.md  lint.mk  poetry.mk  pyproject.toml  shared.mk
data/: bed_sample.bed  fata_sample.fasta  vcf_sample.vcf
notebook-guides/glue/genomic_ingestion/: Makefile  README.md  pyproject.toml
notebook-guides/glue/genomic_ingestion/data/: example.gff3
notebook-guides/glue/genomic_ingestion/src/: formats.ipynb
notebook-guides/glue/genomic_ingestion/src/.ipynb_checkpoints/: formats-checkpoint.ipynb
notebook-guides/glue/genomic_ingestion/test/: notebook_parameters.json
notebook-guides/python/genomic_formats/: Makefile  README.md  pyproject.toml
notebook-guides/python/genomic_formats/data/: bed_sample.bed  fasta_sample.fasta  vcf_sample.vcf
notebook-guides/python/genomic_formats/src/: formats.ipynb
notebooks/: formats.ipynb
shared/pyspark/bio_pyspark/: README.md  pyproject.toml
shared/pyspark/bio_pyspark/src/: __init__.py
shared/python/development_package/: Makefile  README.md  pyproject.toml
shared/resources/: README.md
shared/resources/glue/: glue.dockerfile  glue.mk  requirements.txt
shared/resources/python/: python-notebook.mk  python.mk
utils/python/resources/: py.dockerfile
utils/shell/repository_utils/: README.md
utils/shell/repository_utils/src/: list_resources.sh
