[tool.poetry]
name = "bio-guide"
version = "0.1.0"
description = ""
authors = ["Loka Team, Andres Sacre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
development_package = { path = "./shared/python/development_package", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
# extend-exclude = [ "**/tests/**" ]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
    # pep8naming
    "N",
    #flake8-unused-arguments
    "ARG"
]
# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = [
    "D417",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
